View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029544 | Open CASCADE | OCCT:Modeling Algorithms | public | 2018-03-05 15:32 | 2018-06-29 21:21 |
Reporter | emv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029544: Regression vs 7.2.0: ShapeUpgrade_UnifySameDomain fails to merge linear edges | ||||
Description | ShapeUpgrade_UnifySameDomain is unable to merge linear edges due to slight vertex deviation from the edge. Most likely, the problem has been introduced by the fix for the issue 0028681. The problem has been discovered while working on the issue #29481. | ||||
Steps To Reproduce | restore [locate_data_file bug29544_edges.brep] ce unifysamedom r ce checknbshapes r -vertex 4 -edge 2 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_7 bug29544_1, bugs modalg_7 bug29544_2 | ||||
|
Branch CR29544 has been created by emv. SHA-1: 69c795471359bcaf74d0217a272f059a92030f0e Detailed log of new commits: Author: emv Date: Mon Mar 5 15:55:16 2018 +0300 0029544: Regression vs 7.2.0: ShapeUpgrade_UnifySameDomain fails to merge linear edges When measuring the deviation of the end of the added edge from the resulting edge take the point on the curve, not from the vertex. Test cases for the issue. |
|
Dear Mikhail, could you please review the git branch CR29544? Test results - http://jenkins-test-10.nnov.opencascade.com:8080/view/CR29544-master-emv/view/COMPARE/. |
|
Reviewed. |
|
Combination - OCCT branch : CR29544 SHA - 69c795471359bcaf74d0217a272f059a92030f0e Products branch : master SHA - 4fd289ec73d35d02f23f3990c73b3acac9a60574 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18236.169999999714 / 18338.37999999957 [-0.56%] Products Total CPU difference: 7488.020000000009 / 7461.340000000009 [+0.36%] Windows-64-VC10: OCCT Total CPU difference: 17678.28292159853 / 17653.338361698563 [+0.14%] Products Total CPU difference: 7988.078005300006 / 7990.761222500007 [-0.03%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29544 has been deleted by kgv. SHA-1: 69c795471359bcaf74d0217a272f059a92030f0e |
occt: master 06084bb8 2018-03-05 12:55:16 Committer: bugmaster Details Diff |
0029544: Regression vs 7.2.0: ShapeUpgrade_UnifySameDomain fails to merge linear edges When measuring the deviation of the end of the added edge from the resulting edge take the point on the curve, not from the vertex. Test cases for the issue. |
Affected Issues 0029544 |
|
mod - src/ShapeUpgrade/ShapeUpgrade_UnifySameDomain.cxx | Diff File | ||
mod - tests/bugs/modalg_7/bug27004 | Diff File | ||
add - tests/bugs/modalg_7/bug29544_1 | Diff File | ||
add - tests/bugs/modalg_7/bug29544_2 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-03-05 15:32 | emv | New Issue | |
2018-03-05 15:32 | emv | Assigned To | => msv |
2018-03-05 15:32 | emv | Relationship added | child of 0028681 |
2018-03-05 15:38 | emv | Assigned To | msv => emv |
2018-03-05 15:38 | emv | Status | new => assigned |
2018-03-05 15:38 | emv | Steps to Reproduce Updated | |
2018-03-06 07:33 | git | Note Added: 0074261 | |
2018-03-06 12:45 | emv | Note Added: 0074267 | |
2018-03-06 12:45 | emv | Assigned To | emv => msv |
2018-03-06 12:45 | emv | Status | assigned => resolved |
2018-03-07 10:04 | msv | Note Added: 0074338 | |
2018-03-07 10:04 | msv | Assigned To | msv => bugmaster |
2018-03-07 10:04 | msv | Status | resolved => reviewed |
2018-03-07 10:56 | bugmaster | Test case number | => bugs modalg_7 bug29544_1, bugs modalg_7 bug29544_2 |
2018-03-07 10:56 | bugmaster | Note Added: 0074343 | |
2018-03-07 10:56 | bugmaster | Status | reviewed => tested |
2018-03-18 13:21 | bugmaster | Changeset attached | => occt master 06084bb8 |
2018-03-18 13:21 | bugmaster | Status | tested => verified |
2018-03-18 13:21 | bugmaster | Resolution | open => fixed |
2018-03-19 10:05 | git | Note Added: 0074613 | |
2018-06-29 21:16 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:21 |
|
Status | verified => closed |