0029544: Regression vs 7.2.0: ShapeUpgrade_UnifySameDomain fails to merge linear edges

When measuring the deviation of the end of the added edge from the resulting edge take the point on the curve, not from the vertex.

Test cases for the issue.